# IHP-Open-PDK

./: .gitignore  build-LIP6.sh  meson.build  pyproject.toml
ihp-sg13g2/: meson.build
ihp-sg13g2/libs.tech/: meson.build
ihp-sg13g2/libs.tech/klayout/tech/macros/: sg13g2_filler_Metal.lym
ihp-sg13g2/libs.tech/ngspice/: meson.build
ihp-sg13g2/libs.tech/ngspice/openvaf/: meson.build
packaging/: coriolis-pdk-ihpsg13g2.dsc  coriolis-pdk-ihpsg13g2.spec  debian.control  debian.rules  mkArchives.sh  uploadOBS.sh
